<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".activity.RecordActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dummyPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/dummyResolution"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="#00FFFFFF"
            android:textColor="@color/lb"
            android:textSize="16sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/dummyCameraSwitch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/camera_rotate"
            android:textColor="#FFFFFF"
            android:textColorHighlight="@color/colorAccent"
            android:visibility="invisible" />

        <fragment
            android:id="@+id/cameraFragment"
            android:name="com.codeplay.geoplay.activity.CameraFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp" />

        <TextView
            android:id="@+id/lblSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:padding="4dp"
            android:text="@string/speed"
            android:textColor="@color/lb"
            android:textSize="16sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/recording_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="11dp"
            android:visibility="gone"
            app:srcCompat="@drawable/recording_indicator" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="125dp"
        app:layout_behavior="com.codeplay.geoplay.ui.LockBottomSheetBehaviour">

        <ImageView
            android:id="@+id/btnStart"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:src="@drawable/start_record"
            app:layout_anchor="@+id/bottom_sheet"
            app:layout_anchorGravity="top|end" />

        <ImageView
            android:id="@+id/btnStop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:elevation="10dp"
            android:src="@drawable/stop_record"
            android:visibility="gone"
            app:layout_anchor="@+id/bottom_sheet"
            app:layout_anchorGravity="top|end" />

        <TextView
            android:id="@+id/btm_sheet_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/pull_up"
            android:padding="8dp"
            android:text="@string/tracking"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            tools:context=".activity.RecordActivity" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



