<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/library"
        android:title="@string/library" />

    <item
        android:id="@+id/nav_record"
        android:icon="@drawable/video_camera"
        android:title="@string/record" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

</menu>