<resources>
    <string name="app_name">Geoplay</string>
    <string name="library">Library</string>
    <string name="record">Record</string>
    <string name="settings">Settings</string>
    <string name="uploading_files">Uploading files</string>
    <string name="resolution">Resolution</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="options_icon_string" translatable="false">⋮</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="indicates_file_uploaded_to_cloud">Indicates file uploaded to cloud</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="duration">Duration</string>
    <string name="location">Location</string>
    <string name="toggle_view">Toggle View</string>
    <string name="send_otp">SEND OTP</string>
    <string name="send_otp_note">We will send you a One time SMS message. Carrier rates may apply</string>
    <string name="logo">Logo</string>
    <string name="logo_title">GEOPLAY</string>
    <string name="phone_placeholder">Your Phone Number</string>
    <string name="check_verification_note">Please type the verification code sent\nto</string>
    <string name="verify">VERIFY</string>
    <string name="hint">number</string>
    <string name="speed">Speed</string>
    <string name="tracking">Tracking</string>
    <string name="verification_code">Verification code</string>
    <string name="change_bitrate">Change Bitrate</string>
    <string name="select_file_storage_location">File Storage Location</string>
    <string name="select_power_mode">Select Power Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select_app_language">App Language</string>
    <string name="upload_settings">Upload Settings</string>
    <string name="other_settings">Other</string>
    <string name="help">Help</string>
    <string name="about_application">About Application</string>
    <string name="logout">Logout</string>
    <string name="power_settings">Power Settings</string>
    <string name="video_settings">Video Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="datetime">DateTime</string>
    <string name="bearing">Bearing</string>
    <string name="map_settings">Map Settings</string>
    <string name="custom_map">Custom Map</string>
    <string name="custom_map_string">Custom Map String</string>
    <string name="choose_map">Choose Map</string>
    <string name="wifi">Upload over WiFi only</string>
    <string name="both">Upload over WiFi and Mobile data</string>
    <string name="google_maps">Google Maps</string>
    <string name="bing_maps">Bing Maps</string>
    <string name="osm_maps">OSM Maps</string>
    <string name="front_camera">Front</string>
    <string name="rear_camera">Rear</string>
    <string name="english_lang">English</string>
    <string name="hindi_lang">Hindi</string>
    <string name="gujarati_lang">Gujarati</string>
    <string name="marathi_lang">Marathi</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_otp">Enter OTP</string>
</resources>