...
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <com.codeplay.geoplay.ui.OtpEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_ll"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
...
            android:maxLength="6"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/et_otp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
...
