...
            android:layout_marginTop="20dp"
            android:text="@string/logo_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Enter Phone Number"
            android:hint="@string/phone_placeholder"
...
